tests/conformance/invalid/bad_page_coordinate_detached.plk
P1 bad_page_coordinate_detached () => R0[:32.16]
1[:32.16] => Z1[:32.16]
2[:32.16] => Z2[:32.16]
PAGE
[10,40] V|1       2       0
[11,40] S|32.16   32.16   32.16
[12,5]  |A + B => R
ENDPAGE
END
